welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:28: error: not found: value Colo
    setCouleurBrosse(Colo.yellow)
                     ^MethodsPicture:30: error: not found: value Colo
    setCouleurBrosse(Colo.red)
                     ^MethodsPicture:32: error: not found: value Colo
    setCouleurBrosse(Colo.blue)
                     ^MethodsPicture:34: error: not found: value Colo
    setCouleurBrosse(Colo.green)
                     ^MethodsPicture:3: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.MethodsPicture'
override def run() {
             ^