welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
}
override def run() {
}

def fairev(){
  avance()
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  left()
  avance()
  baisseBrosse()
  leveBrosse()
  recule()
  right()
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  avance()
  left()
  }

def rec() {
  for (a<-1 to 3){
    setCouleurBrosse(Colo.yellow)
    fairev()
    setCouleurBrosse(Colo.red)
    fairev()
    setCouleurBrosse(Colo.blue)
    fairev()
    setCouleurBrosse(Colo.green)
    avance()
    avance()
    avance()
    avance()
    avance()
  }
  left()
  avance()
  avance()
  avance()
  avance()
  avance()
  right()
  
}